--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tauri-apps/api": "^1",
     "axios": "^1.7.2",
+    "firebase": "^10.12.3",
+    "firebase-tools": "^13.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
